@@ -1894,6 +1894,7 @@ describe 'Asciidoctor::PDF::Converter - List' do
         callout_list_font_size: 9,
         callout_list_font_color: '555555',
         callout_list_item_spacing: 3,
+        callout_list_marker_font_color: '0000FF',
         conum_font_size: nil,
       }
 
@@ -1910,8 +1911,9 @@ describe 'Asciidoctor::PDF::Converter - List' do
       conum_1_text = pdf.find_text ?\u2460
       (expect conum_1_text).to have_size 2
       (expect conum_1_text[0][:font_size]).to eql 11
+      (expect conum_1_text[0][:font_color]).to eql 'B12146'
       (expect conum_1_text[1][:font_size]).to eql 9
-      (expect conum_1_text[1][:font_color]).to eql 'B12146'
+      (expect conum_1_text[1][:font_color]).to eql '0000FF'
       colist_1_text = pdf.find_unique_text %r/^The base URL/
       (expect colist_1_text[:font_size]).to eql 9
       (expect colist_1_text[:font_color]).to eql '555555'
